--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>this is the app comp of, {{title}}</h1>
 
 <ul>
+  <li><a routerLink="/login">Login</a></li>
   <li><a routerLink="/chocolate">chocolate</a></li>
   <li><a routerLink="/ice-cream">ice-cream</a></li>
   <li><a routerLink="/user/5">user 5</a></li>
