--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,12 @@
   <li><a routerLink="/ice-cream">ice-cream</a></li>
   <li><a routerLink="/user/5">user 5</a></li>
   <li><a routerLink="/data-title">data-title</a></li>
+  <li><a routerLink="/chassidim-menu">route-children-chassidim-menu</a></li>
+  <li><a routerLink="/pipe-example">pipe example , and highlight directive</a></li>
+  <li><a routerLink="/reactive-forms">reactive-forms</a></li>
+  <li><a routerLink="/contact-us-form">Contact Us Form</a></li>
+    
+
 </ul>
 
 <router-outlet></router-outlet>
