--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   <li><a routerLink="/pipe-example">pipe example , and highlight directive</a></li>
   <li><a routerLink="/reactive-forms">reactive-forms</a></li>
   <li><a routerLink="/contact-us-form">Contact Us Form</a></li>
+  <li><a routerLink="/practice-pipes">practice-pipes</a></li>
     
 
 </ul>
