13 pipes some dirs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <li><a routerLink="/reactive-forms">reactive-forms</a></li>
   <li><a routerLink="/contact-us-form">Contact Us Form</a></li>
   <li><a routerLink="/practice-pipes">practice-pipes</a></li>
+  <li><a routerLink="/practice-directives">practice-directives</a></li>
     
 
 </ul>
